--- a/portfolio/src/Components/Header/Header.module.scss
+++ b/portfolio/src/Components/Header/Header.module.scss
@@ -1,15 +1,22 @@
+@import "../../../styles/styles.scss";
 .header {
-  color: white;
-  background-color: black;
   display: flex;
   justify-content: center;
-  
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 70px;
+  background: $generalBackground;
+  z-index: 99;
 }
 
 .nav {
+  width: 980px;
   display: flex;
+  justify-content: center;
   height: 50px;
-  padding: 0 20px;
+  /* padding: 0 20px; */
 }
 
 nav ul {
@@ -26,14 +33,14 @@ nav li {
 }
 
 nav a {
-  color: antiquewhite;
+  color: #f0e9d2;
   text-decoration: none;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 800;
   padding: 5px 10px;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
 nav a:hover {
-  background-color: #555;
+  background-color: #703d23;
 }
