--- a/portfolio/src/index.scss
+++ b/portfolio/src/index.scss
@@ -1,3 +1,5 @@
+@import '../styles/styles.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,8 +7,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
-  color: antiquewhite;
+  background-color: $generalBackground;
+  /* background: #3c2a21; */
+  color: $generalFontColor  ;
+  p{
+    color:#a8a8a8;
+  }
 }
 
 code {
