--- a/portfolio/src/Components/AboutMe/AboutMe.module.scss
+++ b/portfolio/src/Components/AboutMe/AboutMe.module.scss
@@ -1,36 +1,51 @@
 @import "../../../styles/styles.scss";
 
 .about {
-  padding: 120px 0px 0px;
-  min-height: 100vh;
+  @include section;
+}
+
+.container {
+  padding: 100px 0px 0px;
   @include flex-column;
   align-items: center;
   cursor: default;
   h2 {
     margin: 0;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 38px;
     margin-bottom: 12px;
   }
   p {
     margin: 0;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
   }
 }
 
 .aboutMeContainer {
   @include flex-row;
-  margin: 64px 0px 0px;
+  padding: 64px 0px 30px;
   width: 980px;
   justify-content: space-between;
   .divImg {
-    width: 40%;
-    height: 100px;
+    width: 42%;
+    height: 555px;
+    /*     border-radius: 16px 30% 16px 16px;*/
+    border-radius: 10% 35% 35% 10%;
+    position: relative;
+    overflow: hidden;
+    img {
+      transform: rotate(-10deg);
+      width: 550px;
+      position: absolute;
+      top: -140px;
+      right: -5px;
+    }
   }
   .aboutInfo {
     @include flex-column;
-    width: 50%;
+    width: 52%;
+    position: relative;
 
     .cardsContainer {
       @include flex-row;
@@ -39,7 +54,7 @@
       .box {
         @include flex-column;
         align-items: center;
-        width: 110px;
+        width: 130px;
         height: auto;
         background: rgb(65, 24, 24);
         border-radius: 8px;
@@ -47,45 +62,30 @@
 
         h3 {
           margin: 0 0 13px;
-          font-size: 22px;
-          font-weight: 700;
+          font-size: 20px;
+          font-weight: 600;
         }
         p {
-          font-weight: 600;
+          font-size: 16px;
+          font-weight: 500;
           text-align: center;
-          width: 100px;
         }
       }
     }
   }
   .aboutText {
-    font-size: 22px;
-    font-weight: 600;
-    margin-bottom: 30px;
+    font-size: 20px;
+    font-weight: 500;
   }
-  button {
-    cursor: pointer;
-    min-width: 202px;
-    height: 64px;
-    width: 50%;
-    background: rgb(65, 24, 24);
-    border: none;
-    border-radius: 8px;
-    color: $generalFontColor;
-    font-size: 18px;
-    font-weight: 700;
-    /* Animation */
-    transition-duration: 0.4s;
-    /* Img-Text Display */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    img {
-      width: 20px;
+  a {
+    button {
+      @include button;
+      /* Button position */
+      bottom: 0;
+      position: absolute;
     }
-  }
-  button:hover {
-    transform: scale(1.05);
+    button:hover {
+      transform: scale(1.05);
+    }
   }
 }
