--- a/portfolio/src/Components/Home/Home.module.scss
+++ b/portfolio/src/Components/Home/Home.module.scss
@@ -1,14 +1,12 @@
 @import "../../../styles/styles.scss";
 
 .home {
-  display: flex;
-  justify-content: center;
-  min-height: 100vh;
-  padding: 160px 0px 88px;
+  @include section;
 }
 .container {
   display: flex;
   flex-direction: row;
+  padding: 200px 0px 0px;
   /* padding: 160px 0px 88px; */
   /* align-items: center; */
   justify-content: space-between;
@@ -95,26 +93,7 @@
       line-height: 32px;
     }
     button {
-      cursor: pointer;
-      min-width: 202px;
-      height: 54px;
-      width: 50%;
-      background: rgb(65, 24, 24);
-      border: none;
-      border-radius: 8px;
-      color: $generalFontColor;
-      font-size: 18px;
-      font-weight: 700;
-      /* Animation */
-      transition-duration: 0.4s;
-      /* Img-Text Display */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      img {
-        width: 20px;
-      }
+      @include button
     }
     button:hover {
       transform: scale(1.05);
@@ -139,11 +118,15 @@
       }
     }
     img {
-      transform: rotate(-10deg);
+      /* transform: rotate(-10deg);
       width: 450px;
       position: absolute;
       top: -100px;
-      right: 0;
+      right: 0; */
+      position: absolute;
+      right: -150px;
+      width: 700px;
+      height: 400px;
     }
   }
 }
