--- a/portfolio/styles/styles.scss
+++ b/portfolio/styles/styles.scss
@@ -1,25 +1,42 @@
 $generalBackground: #131111;
+$buttonBackground: rgb(65, 24, 24);
 $generalFontColor: #f0e9d2;
 
+@mixin section {
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+}
+@mixin button {
+  cursor: pointer;
+  min-width: 202px;
+  height: 64px;
+  width: 50%;
+  background: rgb(65, 24, 24);
+  border: none;
+  border-radius: 8px;
+  color: $generalFontColor;
+  font-size: 18px;
+  font-weight: 700;
+  /* Animation */
+  transition-duration: 0.4s;
+  /* Img-Text Display */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  img {
+    width: 20px;
+  }
+}
 @mixin flex-column {
   display: flex;
   flex-direction: column;
 }
-@mixin flex-row{
-    display: flex;
-    flex-direction:row ;
+@mixin flex-row {
+  display: flex;
+  flex-direction: row;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 @mixin responsive($device) {
   /*MEDIA QUERIES*/
