--- a/portfolio/styles/styles.scss
+++ b/portfolio/styles/styles.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:wght@400;500;600;700&family=Inter:wght@400;600;700&display=swap");
+
+
 $generalBackground: #131111;
 $buttonBackground: rgb(65, 24, 24);
 $generalFontColor: #f0e9d2;
