--- a/portfolio/src/Components/Skills/Skills.module.scss
+++ b/portfolio/src/Components/Skills/Skills.module.scss
@@ -29,20 +29,22 @@
     gap: 90px;
     .box {
       @include flex-column;
+      padding: 40px 30px;
       width: 380px;
-      /*       height: 355px;
- */
       align-items: center;
       /* Box styles */
       background: $buttonBackground;
       border-radius: 8%;
+      h3 {
+        font-size: 20px;
+        margin: 0 0 20px;
+      }
       .groupseparation {
         @include flex-row;
         gap: 40px;
       }
       .skillsgroup {
         width: 100%;
-        align-items: center;
         @include flex-column;
         .skillsdata {
           @include flex-row;
@@ -59,6 +61,7 @@
           }
           p {
             margin-top: 10px;
+            font-size: 14px;
           }
         }
       }
