--- a/portfolio/src/index.scss
+++ b/portfolio/src/index.scss
@@ -1,21 +1,22 @@
-@import '../styles/styles.scss';
+@import "../styles/styles.scss";
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+  font-family: "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $generalBackground;
   /* background: #3c2a21; */
-  color: $generalFontColor  ;
-  p{
-    color:#a8a8a8;
+  color: $generalFontColor;
+  p {
+    color: #a8a8a8;
   }
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
