--- a/portfolio/src/Components/Header/Header.module.scss
+++ b/portfolio/src/Components/Header/Header.module.scss
@@ -19,7 +19,7 @@
   /* padding: 0 20px; */
 }
 
-nav ul {
+.ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -28,19 +28,21 @@ nav ul {
   height: 100%;
 }
 
-nav li {
+ul li {
   margin: 0 10px;
 }
 
-nav a {
+li button {
+  background-color: $generalBackground;
   color: #f0e9d2;
   text-decoration: none;
   font-size: 18px;
   font-weight: 800;
   padding: 5px 10px;
   border-radius: 5px;
+  border: none;
   transition: background-color 0.3s ease;
 }
-nav a:hover {
+li button:hover {
   background-color: #703d23;
 }
