--- a/portfolio/src/Components/Home/Home.module.scss
+++ b/portfolio/src/Components/Home/Home.module.scss
@@ -4,19 +4,14 @@
   @include section;
 }
 .container {
-  display: flex;
-  flex-direction: row;
-  padding: 200px 0px 0px;
-  /* padding: 160px 0px 88px; */
-  /* align-items: center; */
+  @include flex-row;
+  @include container-width-padding;
+  padding-top: 200px;
   justify-content: space-between;
-  /* gap: 50px; */
-  width: 980px;
   height: 520px;
 
   .linksIcon {
-    display: flex;
-    flex-direction: column;
+    @include flex-column;
     width: 40px;
     justify-content: center;
     gap: 30px;
@@ -38,10 +33,9 @@
     }
   }
   .profileContainer {
+    @include flex-column;
     min-width: 420px;
     width: 405px;
-    display: flex;
-    flex-direction: column;
     justify-content: space-evenly;
     cursor: default;
     h1 {
@@ -70,21 +64,6 @@
           }
         }
       }
-      /* span{
-        animation: move 2s ease-in-out infinite;
-        @keyframes move {
-          0% {
-            transform:rotateY(20deg);
-          }
-          50% {
-            transform:rotateY(50deg);
-          }
-          100% {
-            transform:rotateY(10deg);
-          }
-        }
-      }
-      */
     }
     p {
       font-weight: 500;
@@ -104,6 +83,7 @@
     width: 400px;
     height: 400px;
     overflow: hidden;
+    -webkit-animation: profile__animate 9s ease-in-out 1s infinite;;
     animation: profile__animate 9s ease-in-out 1s infinite;
     @keyframes profile__animate {
       0% {
@@ -118,11 +98,6 @@
       }
     }
     img {
-      /* transform: rotate(-10deg);
-      width: 450px;
-      position: absolute;
-      top: -100px;
-      right: 0; */
       position: absolute;
       right: -150px;
       width: 700px;
