--- a/portfolio/src/Components/AboutMe/AboutMe.module.scss
+++ b/portfolio/src/Components/AboutMe/AboutMe.module.scss
@@ -73,6 +73,9 @@
       margin: 0 0 30px 0;
       @include responsive("Tablet") {
         display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: minmax(auto, auto);
+        gap: 10px 10px;
       }
       .box {
         @include flex-column;
@@ -83,7 +86,9 @@
         background: rgb(65, 24, 24);
         border-radius: 8px;
         padding: 20px 15px;
-
+        @include responsive("Tablet") {
+          width: auto;
+        }
         h3 {
           margin: 0 0 13px;
           font-size: 20px;
@@ -93,6 +98,13 @@
           font-size: 16px;
           font-weight: 500;
           text-align: center;
+        }
+      }
+      .box3 {
+        @include responsive("Tablet") {
+          grid-column: 1 / 3;
+          grid-row: 2;
+          padding: 20px 0px;
         }
       }
     }
@@ -105,6 +117,11 @@
       margin-bottom: 85px;
     }
   }
+  span {
+    @include responsive("Tablet") {
+      margin: auto;
+    }
+  }
   a {
     button {
       @include button;
@@ -112,10 +129,9 @@
       bottom: 0;
       position: absolute;
       @include responsive("Tablet") {
-left:0;
-right: 0;
-margin: auto auto;
-
+        left: 0;
+        right: 0;
+        margin: auto auto;
       }
     }
     button:hover {
