--- a/portfolio/src/Components/Home/Home.module.scss
+++ b/portfolio/src/Components/Home/Home.module.scss
@@ -11,11 +11,13 @@
   gap: 40px;
   height: 520px;
   @include responsive("Tablet") {
+    /*justify-content: flex-start; */
+    /*grid-template-columns: repeat(2, 40px); */
+    grid-template-columns: 40px 300px;
+    grid-auto-rows: minmax(auto, auto);
     display: grid;
-    /* grid-template: ; */
-    /* align-items: center;
-    flex-direction: column; */
-    height: auto
+    height: auto;
+    gap: 15px;
   }
   .linksIcon {
     @include flex-column;
@@ -44,6 +46,11 @@
     min-width: 420px;
     width: 405px;
     justify-content: space-evenly;
+    @include responsive("Tablet") {
+      grid-row: 2;
+      min-width: 360px;
+      width: 100%;
+    }
     cursor: default;
     h1 {
       margin: 0;
@@ -69,6 +76,14 @@
           100% {
             transform: rotate(10deg);
           }
+        }
+      }
+    }
+    @include responsive("Tablet") {
+      h1 {
+        font-size: 32px;
+        p {
+          font-size: 26;
         }
       }
     }
@@ -104,11 +119,19 @@
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
       }
     }
+    @include responsive("Tablet") {
+      height: 300px;
+      width: 300px;
+    }
     img {
       position: absolute;
       right: -150px;
       width: 700px;
       height: 400px;
+      @include responsive("Tablet") {
+        right: -205px;
+        top: -35px;
+      }
     }
   }
 }
