--- a/portfolio/src/Components/Header/Header.module.scss
+++ b/portfolio/src/Components/Header/Header.module.scss
@@ -9,14 +9,15 @@
   height: 70px;
   background: $generalBackground;
   z-index: 99;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+      rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
 .nav {
-  width: 980px;
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 50px;
-  /* padding: 0 20px; */
 }
 
 .ul {
@@ -26,13 +27,31 @@
   display: flex;
   align-items: center;
   height: 100%;
+  @include responsive("NavBar") {
+    top: 70px;
+    position: absolute;
+    align-items: baseline;
+    left: -200px;
+    flex-direction: column;
+    transition: 0.6s;
+    background: $generalBackground;
+    height: 240px;
+    width: 190px;
+    border-radius: 0 0 40% 0;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+      rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  }
+}
+.f {
+  left: 0;
 }
 
 ul li {
   margin: 0 10px;
 }
 
-li button {
+.button {
+  height: 36px;
   background-color: $generalBackground;
   color: #f0e9d2;
   text-decoration: none;
@@ -43,6 +62,41 @@ li button {
   border: none;
   transition: background-color 0.3s ease;
 }
-li button:hover {
+.button:hover {
   background-color: #703d23;
+}
+
+/* _______Menu Responsive_______ */
+
+.burger {
+  display: none;
+  @include responsive("NavBar") {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 15px;
+    height: min-content;
+    cursor: pointer;
+    padding-top: 10px;
+  }
+  .bar {
+    width: 35px;
+    height: 4px;
+    margin-bottom: 10px;
+    background-color: #f0e9d2;
+    border-radius: 10%;
+    transition: 0.4s;
+  }
+
+  .actbar:nth-child(1) {
+    position: absolute;
+    transform: rotate(45deg);
+  }
+  .actbar:nth-child(2) {
+    position: absolute;
+    width: 0;
+  }
+  .actbar:nth-child(3) {
+    transform: rotate(-45deg);
+  }
 }
