--- a/portfolio/src/Components/Header/Header.module.scss
+++ b/portfolio/src/Components/Header/Header.module.scss
@@ -10,7 +10,7 @@
   background: $generalBackground;
   z-index: 99;
   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
-      rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
 .nav {
@@ -28,21 +28,37 @@
   align-items: center;
   height: 100%;
   @include responsive("NavBar") {
-    top: 70px;
-    position: absolute;
     align-items: baseline;
-    left: -200px;
     flex-direction: column;
+
+    width: 170px;
+    height: 240px;
+
+    position: absolute;
+    top: 65px;
+    left: -200px;
+    border-radius: 0 0 50px 0;
+
+    /* display: grid;
+    height: 120px;
+    width: 100%;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, 50px);
+    position: absolute;
+    top:-170px; */
+
     transition: 0.6s;
     background: $generalBackground;
-    height: 240px;
-    width: 190px;
-    border-radius: 0 0 40% 0;
-    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
-      rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    /* box-shadow: rgba(67, 71, 85, 0.27) 0px 5px 0.25em,
+      rgba(90, 125, 188, 0.05) 0px 5px 1em; */
+    box-shadow: 0px 4px 4px -4px rgba(90, 125, 188, 0.05),
+      4px 0px 4px -4px rgba(67, 71, 85, 0.27),
+      -4px 0px 4px -4px rgba(90, 125, 188, 0.05),
+      0px -4px 4px -4px rgba(0, 0, 0, 0);
   }
 }
 .f {
+  /* top:68px */
   left: 0;
 }
 
@@ -86,18 +102,22 @@ ul li {
     background-color: #f0e9d2;
     border-radius: 10%;
     transition: 0.4s;
+    position: relative;
   }
 
   .actbar:nth-child(1) {
-    position: absolute;
     transform: rotate(45deg);
+    bottom: -14px;
   }
   .actbar:nth-child(2) {
     /* position: absolute;
     width: 0; */
-    display: none;
+    opacity: 0;
+    /* display: none;  */
   }
   .actbar:nth-child(3) {
+    top: -14px;
+    position: relative;
     transform: rotate(-45deg);
   }
 }
