--- a/portfolio/src/Components/Header/Header.module.scss
+++ b/portfolio/src/Components/Header/Header.module.scss
@@ -82,7 +82,8 @@ ul li {
   transition: background-color 0.3s ease;
 }
 .button:hover {
-  background-color: #703d23;
+  background-color:// #703d23;
+  $buttonBackground
 }
 
 /* _______Menu Responsive_______ */
