--- a/portfolio/src/Components/Contact/Contact.module.scss
+++ b/portfolio/src/Components/Contact/Contact.module.scss
@@ -5,9 +5,23 @@
 }
 .container {
   @include flex-column;
-  padding: 100px 0px 0px;
+  @include container-width-padding;
+  /*   padding-left: 12vw;
+  padding-right: 12vw; */
+  padding-left: 0vw;
+  padding-right: 0vw;
   align-items: center;
+  max-width: 950px;
   cursor: default;
+  transition: 0.4s;
+  @include responsive("NavBar") {
+    padding-left: 7vw;
+    padding-right: 7vw;
+  }
+  @include responsive("phone-M") {
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
   h2 {
     margin: 0;
     font-weight: 700;
@@ -20,6 +34,7 @@
     font-weight: 600;
   }
   .container0 {
+    transition: 0.4s;
     padding-top: 110px;
     padding-bottom: 30px;
     display: flex;
@@ -30,13 +45,14 @@
       @include flex-column;
       gap: 80px;
       padding-top: 80px;
+      max-width: 560px;
     }
   }
   .cardsContainer {
     @include flex-column;
     justify-content: space-between;
     gap: 25px;
-    width: 310px;
+    width: 100%;
     .card {
       @include flex-column;
       align-items: center;
@@ -81,7 +97,8 @@
   }
   .formContainer {
     @include flex-column;
-    width: 310px;
+    width: 100%;
+    min-width: 310px;
     form {
       width: 100%;
     }
@@ -99,7 +116,7 @@
       input {
         color: $generalFontColor;
         font-size: 15px;
-        width: 270px;
+        width: calc(100% - 40px);
         padding: 20px;
         margin: 0px 0px 30px;
         border-radius: 6px;
@@ -115,7 +132,7 @@
         textarea {
           color: $generalFontColor;
           font-size: 15px;
-          width: 237px;
+          width: 100%;
           height: 100px;
           background: $buttonBackground;
           border-radius: 6px;
@@ -132,6 +149,7 @@
         right: 5px;
         font-size: 16px;
         position: absolute;
+        color: indianred;
       }
     }
     .messageInput {
