--- a/portfolio/src/Components/Home/Home.module.scss
+++ b/portfolio/src/Components/Home/Home.module.scss
@@ -10,9 +10,8 @@
   justify-content: center;
   gap: 40px;
   height: 520px;
+  transition: 0.3s;
   @include responsive("Tablet") {
-    /*justify-content: flex-start; */
-    /*grid-template-columns: repeat(2, 40px); */
     grid-template-columns: 40px 300px;
     grid-auto-rows: minmax(auto, auto);
     display: grid;
@@ -50,6 +49,7 @@
       grid-row: 2;
       min-width: 360px;
       width: 100%;
+      align-items: center;
     }
     cursor: default;
     h1 {
@@ -95,6 +95,9 @@
     }
     button {
       @include button;
+      @include responsive("Tablet") {
+        width: calc(100% - 0px);
+      }
     }
     button:hover {
       transform: scale(1.05);
