--- a/portfolio/src/Components/Skills/Skills.module.scss
+++ b/portfolio/src/Components/Skills/Skills.module.scss
@@ -39,11 +39,13 @@
       padding: 40px 30px;
       width: 380px;
       align-items: center;
+      transition: 0.3s;
       /* Box styles */
       background: $buttonBackground;
       border-radius: 8%;
-      box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
-      @include responsive("Tablet") {
+      box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+        rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+      @include responsive("phone-M-L") {
         width: 275px;
       }
       h3 {
