--- a/portfolio/src/Components/Contact/Contact.module.scss
+++ b/portfolio/src/Components/Contact/Contact.module.scss
@@ -41,6 +41,7 @@
     width: 100%;
     justify-content: center;
     gap: 50px;
+    margin-bottom: 80px;
     @include responsive("phone-L") {
       @include flex-column;
       gap: 80px;
