--- a/portfolio/src/Components/Header/Header.module.scss
+++ b/portfolio/src/Components/Header/Header.module.scss
@@ -30,13 +30,12 @@
   @include responsive("NavBar") {
     align-items: baseline;
     flex-direction: column;
-
     width: 170px;
     //with projects
     //height: 240px;
     //without projects
     height: 195px;
-
+    gap: 5px;
     position: absolute;
     top: 65px;
     left: -200px;
@@ -50,7 +49,7 @@
     position: absolute;
     top:-170px; */
 
-    transition: 0.6s;
+    transition: 0.5s;
     background: $generalBackground;
     /* box-shadow: rgba(67, 71, 85, 0.27) 0px 5px 0.25em,
       rgba(90, 125, 188, 0.05) 0px 5px 1em; */
@@ -70,7 +69,6 @@ ul li {
 }
 
 .button {
-  height: 36px;
   background-color: $generalBackground;
   color: #f0e9d2;
   text-decoration: none;
@@ -80,10 +78,25 @@ ul li {
   border-radius: 5px;
   border: none;
   transition: background-color 0.3s ease;
+  cursor: pointer;
+  @include flex-column;
+  align-items: center;
+  .line {
+    width: 0;
+    height: 1px;
+    background: #f0e9d2;
+    transition: 0.4s;
+  }
 }
+.active {
+  .line {
+    width: 100%;
+  }
+}
+
 .button:hover {
   background-color:// #703d23;
-  $buttonBackground
+    $buttonBackground;
 }
 
 /* _______Menu Responsive_______ */
