--- a/portfolio/styles/styles.scss
+++ b/portfolio/styles/styles.scss
@@ -2,7 +2,9 @@
 
 $generalBackground: #131111;
 $buttonBackground: rgb(65, 24, 24);
-$generalFontColor: #f0e9d2;
+//$generalFontColor: #f0e9d2;
+//$generalFontColor: #f1faee;
+$generalFontColor: #f4f1de;
 
 @mixin container-width-padding {
   width: 100%;
