--- a/portfolio/src/Components/Experience/Experience.module.scss
+++ b/portfolio/src/Components/Experience/Experience.module.scss
@@ -82,7 +82,7 @@
     position: absolute;
     width: 20px;
     height: 20px;
-    background-color: #f0e9d2;
+    background-color: $generalFontColor;
     border-radius: 50%;
     top: 10%;
     z-index: 4;
