--- a/portfolio/src/Components/Experience/Experience.module.scss
+++ b/portfolio/src/Components/Experience/Experience.module.scss
@@ -25,6 +25,7 @@
   position: relative;
   margin: 50px auto;
   width: 100%;
+  max-width: 1300px;
   .line {
     position: absolute;
     left: 0;
