--- a/portfolio/styles/styles.scss
+++ b/portfolio/styles/styles.scss
@@ -4,7 +4,7 @@ $generalBackground: #131111;
 $buttonBackground: rgb(65, 24, 24);
 //$generalFontColor: #f0e9d2;
 //$generalFontColor: #f1faee;
-$generalFontColor: #f4f1de;
+$generalFontColor: #fffdfd;
 
 @mixin container-width-padding {
   width: 100%;
